# FastAPITaskForWebellian

./: .gitignore  Makefile  docker-compose.yml  main.py  pyproject.toml  readme.md  todo.md
data/: catalogs.csv  products.csv
migrations/: env.py
migrations/versions/: c6a172b4d8f7_product_price_added.py
models/: __init__.py  catalogs.py  products.py
routers/: __init__.py  catalogs.py  products.py
schemas/: catalogs.py  products.py
services/: config.py  engine.py  pagination.py
shared/: exeptions.py  utils.py
tests/: conftest.py  test_catalogs.py  test_products.py
