[project]
name = "fastapitaskforwebelian"
version = "0.1.0"
package = true
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "greenlet>=3.2.4",
    "uvicorn>=0.35.0",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "sqlmodel>=0.0.24",
    "loguru>=0.7.3",
    "pandas>=2.3.1",
    "alembic>=1.16.4",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "black>=25.1.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
